maint[ci]: trigger tests on push to pre-release branches

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -3,7 +3,7 @@ name: "tidy3d-frontend-tests"
 on:
   workflow_dispatch:
   push:
-    branches: [ develop, latest ]
+    branches: [ develop, latest, 'pre/*' ]
   pull_request:
     branches:
       - latest
