--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -8,7 +8,7 @@ on:
         type: boolean
         default: false
   push:
-    branches: [ develop, latest , 'pre/*']
+    branches: [ develop, latest ]
   pull_request:
     branches:
       - latest
